--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,11 @@
 {
+  "Security": {
+    "ApiKey": "fleetzone-sprint4-key"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Oracle": "Data Source=oracle.fiap.com.br:1521/orcl;User ID=RM556652;Password=120206;"
-  }
+  "AllowedHosts": "*"
 }
