--- a/FleetZone_NET.csproj
+++ b/FleetZone_NET.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -13,7 +13,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="9.0.0" />
     <PackageReference Include="Microsoft.ML" Version="3.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.13">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,9 +25,15 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="Oracle.EntityFrameworkCore" Version="8.23.70" />
   </ItemGroup>
-<!-- FluentValidation removed to avoid runtime assembly mismatches in testhost; validation handled with DataAnnotations/manual helpers -->
+
+  <!-- FluentValidation removed to avoid runtime assembly mismatches in testhost; validation handled with DataAnnotations/manual helpers -->
 
   <ItemGroup>
     <Folder Include="Domain\Exceptions\" />
+  </ItemGroup>
+  <!-- Exclude tests folder (keeps test sources out of the main web project build) -->
+  <ItemGroup>
+    <Compile Remove="FleetZone_NET.Tests\**\*.cs" />
+    <EmbeddedResource Remove="FleetZone_NET.Tests\**\*.resx" />
   </ItemGroup>
 </Project>
